name:                unfav
version:             0.2
synopsis:            A tool to clear out old Twitter favorites
description:         
   .
   This package provides an executable tool to delete old Twitter favorites.
   .
   Usage: unfav --generate --file "my.token" --key 99999999 --secret 99999999999
   .
     and: unfav --file my.token
   .
category:            Twitter
stability:           experimental
license:             BSD3
license-file:        LICENSE
author:              Kevin Cantu <me@kevincantu.org>
maintainer:          Kevin Cantu <me@kevincantu.org>
copyright:           (c) 2011 Kevin Cantu
homepage:            https://github.com/killerswan/twitter-unfav
bug-reports:         https://github.com/killerswan/twitter-unfav/issues
build-type:          Simple
cabal-version:       >=1.8

source-repository head
   type:       git
   location:   https://github.com/killerswan/twitter-unfav

executable unfav
   main-is:          Main.hs
   hs-source-dirs:   .
   build-depends:    askitter >= 0.0.4,
                     base,
                     bytestring,
                     strptime,
                     text,
                     time


